human-intervention-logs/org.hsqldb:hsqldb:2.4.1/gradle-test/gradle-test-2026-05-23T09-22-24-555211Z.log
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE

> Configure project :
GraalVM Reachability Metadata TCK
---------------------------------

> Task :tckTest
====================
Testing library: org.hsqldb:hsqldb:2.4.1
Command: `/home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2626-659e8bae/gradlew nativeTest`
Executing test...
-------
Starting a Gradle Daemon, 1 busy and 44 stopped Daemons could not be reused, use --status for details
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE
> Task :tck-test-support:compileJava UP-TO-DATE
> Task :tck-test-support:processResources NO-SOURCE
> Task :compileJava NO-SOURCE
> Task :tck-test-support:classes UP-TO-DATE
> Task :processResources NO-SOURCE
> Task :classes UP-TO-DATE
> Task :tck-test-support:jar UP-TO-DATE

/home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2626-659e8bae/tests/src/org.hsqldb/hsqldb/2.4.1/src/test/java/org_hsqldb/hsqldb/MainInvokerTest.java:15: error: package org.hsqldb.cmdline.sqltool does not exist
> Task :compileTestJava FAILED
import org.hsqldb.cmdline.sqltool.Calculator;
                                 ^
/home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2626-659e8bae/tests/src/org.hsqldb/hsqldb/2.4.1/src/test/java/org_hsqldb/hsqldb/MainInvokerTest.java:28: error: cannot find symbol
            MainInvoker.invoke(Calculator.class.getName(), new String[] { "(one + two) * three" });
                               ^
  symbol:   class Calculator
  location: class MainInvokerTest
2 errors

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2626-659e8bae/tests/src/org.hsqldb/hsqldb/2.4.1/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler output below.
  /home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2626-659e8bae/tests/src/org.hsqldb/hsqldb/2.4.1/src/test/java/org_hsqldb/hsqldb/MainInvokerTest.java:28: error: cannot find symbol
              MainInvoker.invoke(Calculator.class.getName(), new String[] { "(one + two) * three" });
                                 ^
    symbol:   class Calculator
    location: class MainInvokerTest
  /home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2626-659e8bae/tests/src/org.hsqldb/hsqldb/2.4.1/src/test/java/org_hsqldb/hsqldb/MainInvokerTest.java:15: error: package org.hsqldb.cmdline.sqltool does not exist
  import org.hsqldb.cmdline.sqltool.Calculator;
                                   ^
  2 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (Powered by Develocity).

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 3s
11 actionable tasks: 1 executed, 10 up-to-date

> Task :tckTest FAILED

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge2/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/2626-659e8bae/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':tckTest'.
> Test for org.hsqldb:hsqldb:2.4.1 failed with exit code 1.

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to generate a Build Scan (Powered by Develocity).
> Get more help at https://help.gradle.org.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 4s
9 actionable tasks: 1 executed, 8 up-to-date
